# ioc-collector

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.ja.md  README.md  config.example.toml  pyproject.toml
src/ioc_collector/: config.py  gemini_client.py  main.py  models.py  report.py  stix_builder.py
tests/: test_gemini_client.py  test_gemini_client_extract.py  test_main.py  test_models.py  test_report.py  test_stix_builder.py
